# clay

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.static  LICENSE  PRIVACY.md  README.md  SECURITY-NOTES.md  SECURITY-ROADMAP.md  android.sh  build-all.sh  build-android-aarch64.sh  build-termux-aarch64.sh  build-termux-armv7.sh  build.rs  build.sh  cbackup.tf  clay-theme-editor.html  clay.output.debug  crypt.tf  default.txt  help.newbie.txt  help.txt  marketing.txt  screenlog.0  websockets.readme
.claude/skills/release/: machines.md
android/: .gitignore  clay-android.apk.idsig  clay-release.keystore  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/clay/mudclient/: CertPinning.java  ClayForegroundService.java  LocalServerManager.java  MainActivity.java  NativeWebSocket.java  SettingsActivity.java  SshProxyManager.java
android/app/src/main/res/drawable/: auth_key_bg.xml  ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: network_security_config.xml
certs/: cert.pem  key.pem
docs/: Makefile  README.md
docs/markdown/: 00-title.md  01-introduction.md  02-installation.md  03-quickstart.md  04-interface.md  05-commands.md  06-tf-commands.md  07-keyboard-shortcuts.md  08-settings.md  09-actions.md  10-multi-world.md  11-web-interface.md  12-remote-gui.md  13-remote-console.md  14-telnet.md  15-ansi-music.md  16-hot-reload.md  17-tls-proxy.md  18-spell-check.md  19-termux.md  20-troubleshooting.md  99-appendix.md
docs/output/: combined.md
docs/scripts/: capture-web.js  generate-docs.sh  generate-screenshots.sh  process-images.sh
docs/tapes/: actions.tape  commands.tape  connect-world.tape  filter.tape  popups.tape  settings.tape  spell-check.tape  startup.tape  tf-commands.tape  world-switching.tape
glutin-0.30.10-patched/: Cargo.toml  build.rs
glutin-winit-0.3.0-patched/: Cargo.toml  build.rs
glutin-winit-0.3.0-patched/src/: lib.rs
mockups/: android-settings.html  clay-gui-mockup.html  connected-worlds-popup.html  gui-redesign.html  remote-gui-main.html  settings-modal.html  web-interface-full.html  web-interface-main.html  web-redesign.html
patches/: apply-patches.sh  glutin-0.30.10.patch  glutin-winit-0.3.0.patch  tao-0.34.5.patch  winit-0.28.7.patch  wry-0.48.1.patch
reference/: commands.md  features.md  networking.md  tf-engine.md
src/: actions.rs  ansi_music.rs  audio.rs  commands.rs  daemon.rs  encoding.rs  http.rs  input.rs  input_handler.rs  keybindings.rs  main.rs  persistence.rs  platform.rs  remote_client.rs  remote_gui.rs  remote_gui2.rs  rendering.rs  scrollback.rs  spell.rs  ssh.rs  telnet.rs  testharness.rs  tests.rs  testserver.rs  theme.rs  tts.rs  util.rs  websocket.rs  webview_gui.rs
src/popup/: console_renderer.rs  gui_renderer.rs  mod.rs
src/popup/definitions/: actions.rs  confirm.rs  connections.rs  filter.rs  help.rs  import.rs  menu.rs  mod.rs  modify_key.rs  notes_list.rs  recent_worlds.rs  setup.rs  web.rs  world_editor.rs  world_selector.rs
src/tf/: bridge.rs  builtins.rs  builtins_test_debug.rs  control_flow.rs  expressions.rs  hooks.rs  macros.rs  mod.rs  parser.rs  variables.rs
src/web/: action-editor.html  app.js  index.html  keybind-editor.html  style.css  theme-editor.html
tao-0.34.5-patched/: Cargo.toml
tao-0.34.5-patched/src/: event.rs
tao-0.34.5-patched/src/platform/: android.rs  unix.rs
tao-0.34.5-patched/src/platform_impl/: mod.rs
tao-0.34.5-patched/src/platform_impl/android/: mod.rs
tao-0.34.5-patched/src/platform_impl/linux/: event_loop.rs
winit-0.28.7-patched/: Cargo.toml  build.rs
winit-0.28.7-patched/src/platform_impl/linux/: mod.rs
wry-0.48.1-patched/: Cargo.toml  build.rs
wry-0.48.1-patched/src/: lib.rs
