[package]
name = "clay"
version = "1.0.0-alpha"
edition = "2021"
rust-version = "1.75"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
ansi-to-tui = "4"
bytes = "1"
strsim = "0.11"
socket2 = { version = "0.5", features = ["all"] }
unicode-width = "0.1"
regex = "1"
futures = "0.3"
aes-gcm = "0.10"
base64 = "0.21"

# TLS support - native-tls by default, rustls for static builds
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-rustls = { version = "0.25", optional = true }
rustls = { version = "0.22", optional = true }
rustls-pemfile = { version = "1", optional = true }
webpki-roots = { version = "0.25", optional = true }

# WebSocket support (TLS features are conditional on backend)
tokio-tungstenite = "0.21"

# Serialization for WebSocket protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing for WebSocket authentication
sha2 = "0.10"
hex = "0.4"

# Async recursion support for Rust 1.75
async-recursion = "1.0"

# Force older versions of transitive deps for Rust 1.75 compatibility
indexmap = ">=2.2.0, <2.5.0"
url = "=2.5.0"
hashbrown = "0.14"
home = "=0.5.5"

# HTTP client for Slack/Discord APIs
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
# GUI client for Linux and Android/Termux (X11)
eframe = { version = "0.24", optional = true, default-features = false, features = ["default_fonts", "glow", "x11"] }
egui = { version = "0.24", optional = true }
egui_extras = { version = "0.24", optional = true, default-features = false, features = ["image", "svg"] }
image = { version = "0.24", optional = true, default-features = false, features = ["png", "gif"] }
arboard = { version = ">=3, <3.4", optional = true }  # 3.4+ pulls moxcms (Rust 2024 edition)
# Audio playback for ANSI music (optional, requires ALSA dev libraries on Linux)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav"] }

[target.'cfg(target_os = "macos")'.dependencies]
# GUI client for macOS (uses native Cocoa, no x11 feature needed)
eframe = { version = "0.24", optional = true, default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.24", optional = true }
egui_extras = { version = "0.24", optional = true, default-features = false, features = ["image", "svg"] }
image = { version = "0.24", optional = true, default-features = false, features = ["png", "gif"] }
arboard = { version = ">=3, <3.4", optional = true }  # 3.4+ pulls moxcms (Rust 2024 edition)
# Audio playback for ANSI music (uses CoreAudio on macOS automatically)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav"] }

[target.'cfg(windows)'.dependencies]
# GUI client for Windows (no x11 feature needed)
eframe = { version = "0.24", optional = true, default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.24", optional = true }
egui_extras = { version = "0.24", optional = true, default-features = false, features = ["image", "svg"] }
image = { version = "0.24", optional = true, default-features = false, features = ["png", "gif"] }
arboard = { version = ">=3, <3.4", optional = true }  # 3.4+ pulls moxcms (Rust 2024 edition)
# Audio playback for ANSI music (uses WASAPI on Windows automatically)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = ["rustls-backend", "remote-gui-audio"]
native-tls-backend = ["tokio-native-tls", "native-tls", "tokio-tungstenite/native-tls"]
rustls-backend = ["tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots", "tokio-tungstenite/rustls-tls-webpki-roots"]
remote-gui = ["eframe", "egui", "egui_extras", "image"]
remote-gui-clipboard = ["remote-gui", "arboard"]
remote-gui-audio = ["remote-gui", "rodio"]

[patch.crates-io]
winit = { path = "winit-0.28.7-patched" }

[[bin]]
name = "clay-test-server"
path = "src/bin/clay-test-server.rs"
