[package]
name = "clay"
version = "1.0.0-beta"
edition = "2021"
rust-version = "1.75"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
ansi-to-tui = "4"
bytes = "1"
strsim = "0.11"
socket2 = { version = "0.5", features = ["all"] }
unicode-width = "0.1"
regex = "1"
futures = "0.3"
aes-gcm = "0.10"
base64 = "0.21"

# TLS support - native-tls by default, rustls for static builds
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-rustls = { version = "0.25", optional = true }
rustls = { version = "0.22", optional = true }
rustls-pemfile = { version = "1", optional = true }
webpki-roots = { version = "0.25", optional = true }

# WebSocket support (TLS features are conditional on backend)
tokio-tungstenite = "0.21"

# Serialization for WebSocket protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing for WebSocket authentication
sha2 = "0.10"
hex = "0.4"

# Async recursion support for Rust 1.75
async-recursion = "1.0"

# Force older versions of transitive deps for Rust 1.75 compatibility
indexmap = ">=2.2.0, <2.5.0"
url = "=2.5.0"
hashbrown = "0.14"
home = "=0.5.5"

# HTTP client for Slack/Discord APIs
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
# Audio playback for ANSI music (optional, requires ALSA dev libraries on Linux)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav"] }
# WebView GUI (native WebView window using system browser engine)
wry = { version = "0.48", optional = true }
tao = { version = "0.34", optional = true }
webkit2gtk = { version = "2.0", optional = true }
gdk = { version = "0.18", optional = true }
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Audio playback for ANSI music (uses CoreAudio on macOS automatically)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav"] }
# WebView GUI (native WebView window using system browser engine)
wry = { version = "0.48", optional = true }
tao = { version = "0.34", optional = true }

[target.'cfg(windows)'.dependencies]
# Audio playback for ANSI music (uses WASAPI on Windows automatically)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav"] }
# WebView GUI (native WebView window using system browser engine)
wry = { version = "0.48", optional = true }
tao = { version = "0.34", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = ["rustls-backend"]
native-tls-backend = ["tokio-native-tls", "native-tls", "tokio-tungstenite/native-tls"]
rustls-backend = ["tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots", "tokio-tungstenite/rustls-tls-webpki-roots"]
webview-gui = ["wry", "tao", "webkit2gtk", "gdk", "gtk", "rodio"]

[patch.crates-io]
tao = { path = "tao-0.34.5-patched" }
wry = { path = "wry-0.48.1-patched" }

[[bin]]
name = "clay-test-server"
path = "src/bin/clay-test-server.rs"
