[package]
name = "clay"
version = "1.2.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
ansi-to-tui = "4"
bytes = "1"
strsim = "0.11"
socket2 = { version = "0.5", features = ["all"] }
unicode-width = "0.1"
regex = "1"
futures = "0.3"
aes-gcm = "0.10"
getrandom = "0.2"
base64 = "0.21"

# Self-signed certificate generation (pure Rust, same crypto as rustls)
rcgen = "0.14"

# TLS support - native-tls by default, rustls for static builds
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
# default-features = false + explicit "ring" feature: rustls 0.23 defaults its
# crypto provider to aws-lc-rs, which needs a C toolchain and does not
# cross-compile cleanly to Android armv7 (breaks the Termux build). ring
# cross-compiles fine and is what Clay has always used. Every TLS dep below
# must stay pinned to ring the same way - see TofuVerifier in platform.rs.
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = { version = "1", optional = true }
webpki-roots = { version = "0.26", optional = true }

# WebSocket support (TLS features are conditional on backend)
tokio-tungstenite = "0.24"

# Serialization for WebSocket protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing for WebSocket authentication
sha2 = "0.10"
hex = "0.4"

# Async recursion support for Rust 1.75
async-recursion = "1.0"

# Force older versions of transitive deps for Rust 1.75 compatibility
indexmap = ">=2.2.0, <2.5.0"
url = ">=2.5.4"
hashbrown = "0.14"
home = "=0.5.5"
time = ">=0.3.37"

# MCCP2 (MUD Client Compression Protocol) zlib decompression
flate2 = "1"

# HTTP client for Slack/Discord APIs
# "rustls-tls" here resolves to reqwest's "rustls-tls-webpki-roots" feature, which
# pulls in "__rustls-ring" - the ring-based crypto provider variant. This unifies
# with our direct rustls/tokio-rustls deps above on the same ring-backed rustls
# 0.23, keeping aws-lc-rs out of the build (see the comment on tokio-rustls above).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# UUID for Edge TTS request IDs
uuid = { version = "1", features = ["v4"] }

# Long-term output archive (scrollback storage)
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
# Audio playback (optional, requires ALSA dev libraries on Linux)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav", "mp3", "vorbis", "flac"] }
# WebView GUI (native WebView window using system browser engine)
wry = { version = "0.48", optional = true }
tao = { version = "0.34", optional = true }
webkit2gtk = { version = "2.0", optional = true }
gdk = { version = "0.18", optional = true }
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Audio playback (uses CoreAudio on macOS automatically)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav", "mp3", "vorbis", "flac"] }
# WebView GUI (native WebView window using system browser engine)
wry = { version = "0.48", optional = true }
tao = { version = "0.34", optional = true }

[target.'cfg(windows)'.dependencies]
# Audio playback (uses WASAPI on Windows automatically)
rodio = { version = "0.17", optional = true, default-features = false, features = ["wav", "mp3", "vorbis", "flac"] }
# WebView GUI (native WebView window using system browser engine)
wry = { version = "0.48", optional = true }
tao = { version = "0.34", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = ["rustls-backend", "native-audio"]
native-tls-backend = ["tokio-native-tls", "native-tls", "tokio-tungstenite/native-tls"]
rustls-backend = ["tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots", "tokio-tungstenite/rustls-tls-webpki-roots"]
native-audio = ["rodio"]
webview-gui = ["wry", "tao", "webkit2gtk", "gdk", "gtk"]

[[bin]]
name = "clay-test-server"
path = "src/bin/clay-test-server.rs"
